# zup

./: .gitignore  README.md  appveyor.yml  flake.nix  pyproject.toml  setup.py  shell.nix
tests/: test_zup.py
zup/: authcheck.py  clickup_client.py  config_store.py  configuration.py  constants.py  logging.py  targetprocess_client.py  timesheet.py  zup.py
