[tool.poetry]
name = "zup"
version = "0.1.0"
description = ""
authors = ["Jóhann Friðriksson <Johann.Fridriksson@silabs.com>"]

[tool.poetry.dependencies]
python = "3.7"
pyside2 = "^5.14.1"
jira = "^2.0.0"
appdirs = "^1.4.3"
keyring = "^21.1.0"
pendulum = "^2.0.5"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.12.0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
