[tool.poetry]
name = "zup"
version = "0.1.0"
description = ""
authors = ["Jóhann Friðriksson <Johann.Fridriksson@silabs.com>"]
include = ["icons"]

[tool.poetry.dependencies]
python = "3.8"
pyside2 = "^5.14.1"
jira = "^2.0.0"
appdirs = "^1.4.3"
keyring = "^21.1.0"
pendulum = "^2.0.5"
cx-Freeze = "^6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.12.0"
pylint = "^2.4.4"

[tool.poetry.scripts]
zup = "zup.zup:main"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
