[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "zup"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "appdirs>=1.4.4",
    "click>=8.0",
    "clickup-python-sdk>=2.0.1",
    "pendulum>=3.0.0",
    "pyside6>=6.9.0",
]

[project.scripts]
zup = "zup.zup:main"
zup-timesheet = "zup.timesheet:main"
